Several tests adjusted